add docker-compose and install mysql connect db is display data to verify

--- a/env/.env.dev
+++ b/env/.env.dev
@@ -1,2 +1,8 @@
 URL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 TZ=Asia/Bangkok
+
+DB_HOST=mysql
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=tutorial
+RUNNING_LOCALLY=true
