--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^22.15.21"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "mysql2": "^3.14.1"
   }
 }
