--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,8 +26,7 @@ jobs:
       # 🐳 รัน docker-compose สำหรับรัน MySQL และ Playwright test
       - name: Run Playwright test via Docker Compose
         run: |
-          docker-compose up -d --build
-          docker-compose down
+          docker-compose up --build --abort-on-container-exit
 
       # 📤 อัปโหลดรายงานผลการทดสอบ (ต้องแน่ใจว่า mount จาก container ออกมาแล้ว)
       - name: Upload Playwright Report
