--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,11 +30,10 @@ jobs:
           echo "Listing generated report:"
           ls -la playwright-report || echo "No report directory"
 
-      - name: Copy Playwright report out of container
+      - name: add report to commit
         run: |
-          CONTAINER_ID=$(docker ps -aqf "name=playwright_playwright_1")
-          docker cp $CONTAINER_ID:/app/playwright-report ./playwright-report
-          ls -la ./playwright-report
+          docker cp playwright_container:/app/playwright-report ./
+          ls -la playwright-report || echo "No report directory"
 
       # 📤 อัปโหลดรายงานผลการทดสอบ (ต้องแน่ใจว่า mount จาก container ออกมาแล้ว)
       - name: Upload Playwright Report
