Re config database

--- a/env/.env.prod
+++ b/env/.env.prod
@@ -1,6 +1,8 @@
-URL=http://localhost:3001
+URL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 TZ=Asia/Bangkok
 
+# Config for DB
+DB_ENABLED=true            # <--- เพิ่มตัวนี้เพื่อเปิด/ปิดการใช้ DB
 DB_HOST=mysql
 DB_USER=root
 DB_PASSWORD=root
