--- a/env/.env.staging
+++ b/env/.env.staging
@@ -1,2 +1,10 @@
-URL=http://localhost:3002
+URL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 TZ=Asia/Bangkok
+
+# Config for DB
+DB_ENABLED=true            # <--- เพิ่มตัวนี้เพื่อเปิด/ปิดการใช้ DB
+DB_HOST=mysql
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=tutorial
+RUNNING_LOCALLY=true
