Config lang en and th

--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "## Install playwright - npm init playwright@latest",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test",
+    "test:dev": "ENV=dev npx playwright test",
+    "test:prod": "ENV=prod npx playwright test",
+    "test:lang-th": "LANG=th npx playwright test",
+    "test:lang-en": "LANG=en npx playwright test",
+    "test:prod-th": "ENV=prod LANG=th npx playwright test"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
