--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,3 @@
-# 🎯 ชื่อ workflow
 name: Playwright Tests with Docker Compose
 
 on:
@@ -23,19 +22,17 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose version
 
-      # 🐳 รัน docker-compose สำหรับรัน MySQL และ Playwright test
+      # 🐳 รัน docker-compose สำหรับรัน MySQL และ Playwright test (ไม่ใช้ -d เพื่อรอให้ test จบ)
       - name: Run Playwright test via Docker Compose
         run: |
-          docker-compose up -d --build
-          echo "Listing generated report:"
-          ls -la playwright-report || echo "No report directory"
+          docker-compose up --build
 
-      - name: add report to commit
+      # แสดงไฟล์ในโฟลเดอร์รายงานที่แมปไว้บน host
+      - name: Listing generated report
         run: |
-          docker cp playwright_container:/app/playwright-report ./
           ls -la playwright-report || echo "No report directory"
 
-      # 📤 อัปโหลดรายงานผลการทดสอบ (ต้องแน่ใจว่า mount จาก container ออกมาแล้ว)
+      # 📤 อัปโหลดรายงานผลการทดสอบ (upload จากโฟลเดอร์ playwright-report บน host)
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
@@ -44,7 +41,7 @@ jobs:
           path: playwright-report/
           retention-days: 30
 
-      # ✅ Deploy รายงานไป GitHub Pages
+      # ✅ Deploy รายงานไป GitHub Pages (เฉพาะ branch main)
       - name: Deploy report to GitHub Pages
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: peaceiris/actions-gh-pages@v3
