--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - ENV=dev
     volumes:
       - ./:/app
-    command: npx playwright test --reporter=html     # ✅ สั่งให้สร้าง HTML report
+    working_dir: /app               # ตั้ง working directory ให้ชัดเจน
+    command: npx playwright test --reporter=html --output=playwright-report
 
   mysql:
     image: mysql:8.0
