--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     environment:
       - ENV=dev
     volumes:
-      - ./:/app
-    working_dir: /app               # ตั้ง working directory ให้ชัดเจน
-    command: npx playwright test --reporter=html --output=playwright-report
+      - ./:/app                   # แมปโฟลเดอร์โปรเจกต์
+      - ./playwright-report:/app/playwright-report  # แมปโฟลเดอร์ report ออกมา host
+    working_dir: /app
+    command: sh -c "npx playwright test --reporter=html --output=playwright-report && ls -la playwright-report"
 
   mysql:
     image: mysql:8.0
