--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,57 +1,46 @@
-name: Playwright Tests with Docker Compose
+# 🎯 ชื่อ workflow ที่จะแสดงบนหน้า GitHub Actions ของ repo
+name: Playwright Tests
 
+# 🚀 Trigger: ทำงานเมื่อมี push หรือ pull request ไปยัง main หรือ master
 on:
   push:
-    branches: [main, master]
+    branches: [main, master]         # ทำงานเมื่อมี push ไปที่ main หรือ master
   pull_request:
-    branches: [main, master]
+    branches: [main, master]         # ทำงานเมื่อมี PR ไปยัง main หรือ master
 
 jobs:
   test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
+    # 🕒 กำหนด timeout สูงสุดของ job นี้
+    timeout-minutes: 60              # ถ้าเกิน 60 นาทีจะถูกยกเลิก
+    runs-on: ubuntu-latest           # ใช้ runner ที่เป็น Ubuntu เวอร์ชันล่าสุด
 
     steps:
-      - uses: actions/checkout@v4
+      # ✅ Step 1: Checkout โค้ดจาก repo
+      - uses: actions/checkout@v4    # ดึง source code ของโปรเจกต์มาใช้งาน
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose version
-
-      - name: Run Playwright tests container in background
-        run: docker-compose up -d --build playwright
-
-      - name: Wait for Playwright container to finish
-        run: |
-          CONTAINER_ID=$(docker ps -a -q -f name=playwright)
-          echo "Waiting for container $CONTAINER_ID to stop..."
-          while [ "$(docker inspect -f '{{.State.Running}}' $CONTAINER_ID)" == "true" ]; do
-            echo "Still running..."
-            sleep 5
-          done
-          echo "Container stopped."
-
-      - name: Copy Playwright report from container
-        run: |
-          CONTAINER_ID=$(docker ps -a -q -f name=playwright)
-          docker cp $CONTAINER_ID:/app/playwright-report ./playwright-report || echo "No report found in container"
-
-      - name: List report files
-        run: ls -la ./playwright-report || echo "No report directory"
-
-      - name: Upload Playwright Report
-        uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+      # 🔧 Step 2: ติดตั้ง Node.js LTS version
+      - uses: actions/setup-node@v4
         with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+          node-version: lts/*        # ใช้ Node.js เวอร์ชัน LTS ล่าสุด
 
-      - name: Deploy report to GitHub Pages
-        if: ${{ github.ref == 'refs/heads/main' }}
-        uses: peaceiris/actions-gh-pages@v3
+      # 📦 Step 3: ติดตั้ง dependencies ด้วย npm
+      - name: Install dependencies
+        run: npm ci                  # ติดตั้งจาก package-lock.json (เร็วและเสถียร)
+
+      # 🌐 Step 4: ติดตั้ง browser engines สำหรับ Playwright
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+        # ติดตั้ง Chromium, Firefox, WebKit พร้อม dependencies ที่จำเป็น
+
+      # 🧪 Step 5: รัน Playwright tests
+      - name: Run Playwright tests
+        run: npx playwright test
+        # รัน automated UI tests ที่กำหนดไว้ในโปรเจกต์
+
+      # 📤 Step 6: อัปโหลดรายงานผลการทดสอบ
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}      # รันเฉพาะเมื่อ workflow ไม่ถูกยกเลิก
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./playwright-report
+          name: playwright-report    # ตั้งชื่อ artifact เป็น "playwright-report"
+          path: playwright-report/   # ระบุโฟลเดอร์รายงานที่จะอัปโหลด
+          retention-days: 30         # เก็บ artifact นี้ไว้ 30 วันบน GitHub
