--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -58,5 +58,20 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: playwright-report
 
+  notify:
+    needs: test
+    if: always()  # ✅ รันเสมอ ไม่ว่า test จะ pass หรือ fail
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Send Teams notification
         run: npx ts-node ./utils/notifications/teamsNotifier.ts
