--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, ready_for_review]  # รันเมื่อ PR ถูกเปิดใหม่ หรือเปลี่ยนสถานะเป็น ready_for_review
     branches:
-      - dev  # รันเฉพาะ PR ที่ส่งไปยัง branch main
+      - main  # รันเฉพาะ PR ที่ส่งไปยัง branch main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}  # จัดกลุ่มงานตามชื่อ workflow + เลข PR หรือ ref
